# podcast_summarizer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/podcast_summarize/: __init__.py  __main__.py  audio_downloader.py  cli.py  downloader.py  metadata.py  summarizer.py  transcriber.py
tests/: quick_test.py  test_combined.py  test_downloader.py
